<resources>
    <string name="app_name">Artefacto</string>
    <string name="title_home">Home</string>
    <string name="title_owned_ticket">My Tickets</string>
    <string name="title_camera">Camera</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_settings">Settings</string>
    <string name="app_subtitle">History Enthusiast</string>
    <string name="welcome_user">Hi, [Username]</string>
    <string name="ticket_counter">Ticket Counter</string>
    <string name="temple_archives">Temple Archives</string>
    <string name="recent_events">Last Seen</string>
    <string name="logo_desc">Logo Aplikasi</string>
    <string name="card_image_desc">Event Image</string>
    <string name="temple_archives_icon">Icon Temple Archives</string>
    <string name="ticket_counter_icon">Icon Ticket Counter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_notifications">Notifications</string>
    <string name="back">Back</string>
    <string name="my_ticket">My Tickets</string>
    <string name="candi">Temple</string>
    <string name="candi_pilih_tiket">Discover the uniqueness and interesting stories behind the Temple!</string>
    <string name="fun_fact_icon">Fun Fact Icon</string>
    <string name="fun_fact_candi_pilih_tiket">Temples in Indonesia are often built with an accurate astronomical orientation, linking spirituality and ancient science.</string>
    <string name="pick_your_artefact">Choose a Temple to Visit:</string>
    <string name="ticket">Input Ticket</string>
    <string name="calendar">Calendar</string>
    <string name="amount">Amount:</string>
    <string name="back_button">Back Button</string>
    <string name="increase_icon">Increase Icon</string>
    <string name="decrease_icon">Decrease Icon</string>
    <string name="date">Date:</string>
    <string name="amount_example">10 tickets</string>
    <string name="price_example">1 Ticket:</string>
    <string name="price_example_result">IDR 50.000</string>
    <string name="total_ticket">Total Ticket:</string>
    <string name="total_price">Total Price:</string>
    <string name="buy_now">Buy Now</string>
    <string name="pick_date">Choose Date</string>
    <string name="full_price_example">IDR 500.000</string>
    <string name="full_amount_example">10 tickets</string>
    <string name="example">Username</string>
    <string name="price">Price:</string>
    <string name="additional_fee">Additional Fee:</string>
    <string name="dana">DANA</string>
    <string name="gopay">Gopay</string>
    <string name="ovo">OVO</string>
    <string name="qris">QRIS</string>
    <string name="linkaja">LinkAja</string>
    <string name="pay">Pay</string>
    <string name="final_price_example">IDR 550.000</string>
    <string name="payment">Payment</string>
    <string name="payment_method">Payment Method</string>
    <string name="unwatched_events">Unexplored</string>
    <string name="arca_ganesha">Arca Ganesha</string>
    <string name="contoh_shortdesc_artefak">Discover the intricate details and significance of the Ganesha statue, a symbol of wisdom and prosperity...</string>
    <string name="image">Image</string>
    <string name="bookmark_icon">Bookmark Icon</string>
    <string name="notification_icon">Notifikasi Icon</string>
    <string name="location_icon">Location Icon</string>
    <string name="temple_image">Temple Image</string>
    <string name="lokasi_candi">Prambanan Temple, Indonesia</string>
    <string name="next">Next</string>
    <string name="persentase_progress_candi">70%</string>
    <string name="back_to_home">Back to Home</string>
    <string name="wonderful_indonesia">wonderful indonesia</string>
    <string name="pick_your_adventure">Start Your Adventure:</string>
    <string name="date_example">Wednesday, 1 January 2025</string>
    <string name="temple_example">Candi Prambanan</string>
    <string name="candi_prambanan">Candi Prambanan</string>
    <string name="fun_fact_candi_prambanan">The Prambanan Temple complex originally had 240 temples. The three main temples are dedicated to Lord Shiva, Vishnu, and Brahma, surrounded by companion temples and other smaller temples.</string>
    <string name="artefact_pick">Start Learning:</string>
    <string name="artefact_details">Artefact Details</string>
    <string name="artefact_image">Artefact Image</string>
    <string name="detail_artefact">Discover the rich cultural and spiritual significance of the Ganesha statue, an ancient symbol of wisdom and protection at Prambanan Temple. Known for its intricate details and artistic mastery, this statue represents the deity Ganesha, revered in Hindu tradition as the remover of obstacles and the patron of arts and sciences.</string>
    <string name="title_fun_fact">Had 240 temples</string>
    <string name="translate">Translate/Terjemahkan</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="preview_image">preview_image</string>
    <string name="background_image">Background Image</string>
    <string name="onboarding_1">Discover the Stories of the Past!</string>
    <string name="onboarding_2">Scan Artifacts\nand Historical Treasures!</string>
    <string name="onboarding_3">Book Your\nTicket to Temples!</string>
    <string name="artefacto">ARTEFACTO</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="no_temples_found">No Temples Found</string>
    <string name="period">Period</string>
    <string name="period_example">9th Century</string>
    <string name="material">Material</string>
    <string name="material_example">Volcanic Stone (Andesite)</string>
    <string name="size">Size</string>
    <string name="size_example">Typically Life-Sized</string>
    <string name="style">Style</string>
    <string name="style_example">Detailed Carvings Characteristic of the Period</string>
    <string name="details">Details</string>
    <string name="artefacts">Artefacts</string>
    <string name="no_artefacts_found">No Artefacts Found</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="example_predict_result">Ini adalah patung:</string>
    <string name="uncreated_register">Fitur ini masih belum tersedia.\nKembali ke halaman Login?</string>

</resources>