<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.artefacto001.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_owned_ticket"
        android:name="com.example.artefacto001.ui.owned_ticket.OwnedTicketFragment"
        android:label="@string/title_owned_ticket"
        tools:layout="@layout/fragment_owned_ticket" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.artefacto001.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.example.artefacto001.ui.bookmarks.BookmarksFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />
</navigation>