<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#e6ba8e"
    android:paddingTop="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:spacing="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="8dp"
            android:layout_marginBottom="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/ivBackPay"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/back_button"
                    android:src="@drawable/arrow_back"
                    tools:ignore="RedundantDescriptionCheck" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_method"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_green" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="8dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@android:color/white"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvPaymentMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_method"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp" />

                <RadioGroup
                    android:id="@+id/rgPaymentMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rbDana"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dana"
                        android:button="@null"
                        android:drawableEnd="@drawable/dana"
                        android:drawablePadding="8dp"
                        android:background="@drawable/radio_button_selector"
                        android:padding="16dp" />

                    <RadioButton
                        android:id="@+id/rbGopay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gopay"
                        android:button="@null"
                        android:drawableEnd="@drawable/gopay"
                        android:drawablePadding="8dp"
                        android:background="@drawable/radio_button_selector"
                        android:padding="16dp" />

                    <RadioButton
                        android:id="@+id/rbOvo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ovo"
                        android:button="@null"
                        android:drawableEnd="@drawable/ovo"
                        android:drawablePadding="8dp"
                        android:background="@drawable/radio_button_selector"
                        android:padding="16dp" />

                    <RadioButton
                        android:id="@+id/rbQris"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/qris"
                        android:button="@null"
                        android:drawableEnd="@drawable/qris"
                        android:drawablePadding="8dp"
                        android:background="@drawable/radio_button_selector"
                        android:padding="16dp" />

                    <RadioButton
                        android:id="@+id/rbLinkAja"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/linkaja"
                        android:button="@null"
                        android:drawableEnd="@drawable/linkaja"
                        android:drawablePadding="8dp"
                        android:background="@drawable/radio_button_selector"
                        android:padding="16dp" />


                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="8dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@android:color/white"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/llPriceDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_price_example"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/additional_fee"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tvAdditionalFee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_example_result"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tvTotalPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/final_price_example"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/btnPay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/lightBrown"
                    android:text="@string/pay"
                    android:textColor="@android:color/white"
                    tools:ignore="TextContrastCheck,VisualLintButtonSize" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
