<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="8dp"
            android:layout_marginBottom="24dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/ivBackDT"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/back_button"
                    android:src="@drawable/arrow_back"
                    tools:ignore="RedundantDescriptionCheck" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ticket"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_green" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/candi_image"
            android:contentDescription="@string/artefact_image"
            app:layout_constraintTop_toBottomOf="@id/cvHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/titleArtefact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/arca_ganesha"
            android:textColor="#EF6C00"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <TextView
            android:id="@+id/descriptionArtefact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/detail_artefact"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/titleArtefact"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="VisualLintLongText" />

        <TextView
            android:id="@+id/tvDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/details"
            android:textColor="#EF6C00"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionArtefact" />

        <LinearLayout
            android:id="@+id/llDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/tvDetails"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/period"
                    android:textSize="14sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/periodArtefact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/period_example"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material"
                    android:textSize="14sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/materialArtefact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:text="@string/material_example"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDetail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:weightSum="2"
            android:baselineAligned="false"
            app:layout_constraintTop_toBottomOf="@id/llDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textSize="14sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/sizeArtefact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_example"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style"
                    android:textSize="14sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/styleArtefact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style_example"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/bookmarkButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bookmark"
            android:contentDescription="@string/bookmark_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llDetail2"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/locateButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:background="@drawable/bg_icon"
            android:foreground="@drawable/ic_location"
            android:contentDescription="@string/location_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llFunFact"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:id="@+id/llFunFact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/bookmarkButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_fun_fact"
                android:contentDescription="@string/fun_fact_icon" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/title_funfact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_fun_fact"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/description_funfact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fun_fact_candi_prambanan"
                    android:textSize="12sp"
                    android:textColor="@android:color/black"
                    tools:ignore="VisualLintLongText" />
            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btnTranslate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/translate"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/lightBrown"
            tools:ignore="TextContrastCheck,VisualLintButtonSize"
            app:layout_constraintTop_toBottomOf="@id/locateButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:lines="2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/btnTranslate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:elevation="10dp"
            android:indeterminateTint="@color/lightBrown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
